# website

./: .gitignore  Cargo.toml  README.md
api/: README.md
api/fetch_api/src/: inquiry.rs
api/login_api/: Cargo.toml
api/login_api/src/: main.rs
api/recruit_api/: Cargo.toml
api/recruit_api/src/: main.rs  recruit.rs
api/reserve_api/: Cargo.toml
api/reserve_api/src/: db.rs  handlers.rs  main.rs  models.rs
api/src/: main.rs  recruit.rs
src/: main.rs
web/: package-lock.json  package.json
web/client/: package-lock.json  package.json  wrangler.toml
web/client/functions/: [[path]].js
web/client/migrations/: 0001_schema.sql
web/client/scripts/: verify-functions.mjs
web/client/src/: App.jsx  index.css  main.jsx
web/client/src/components/: CalenderWidget.jsx  Footer.jsx  Header.jsx  PageTransition.jsx
web/client/src/hooks/: useAdmin.js  useImageUpload.js
web/client/src/lib/: api.js  supabase.js
web/client/src/pages/: About.jsx  Board.jsx  Contact.jsx  Exec.jsx  Gallery.jsx  History.jsx  Home.jsx  Join.jsx  Location.jsx  Login.jsx  PostDetail.jsx  Profile.jsx  Reserve.jsx  Rules.jsx  Study.jsx  StudyGroups.jsx  Write.jsx
web/client/src/pages/admin/: AdminDashboard.jsx  AdminFaqs.jsx  AdminHistory.jsx  AdminPosts.jsx  AdminStudyGroups.jsx  AdminUsers.jsx
web/scripts/: dev.cjs
web/server/: .env.example  package-lock.json  package.json
web/server/src/: index.js
