[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }